syntax = "proto2";

package cardgame;

option optimize_for = LITE_RUNTIME;

option java_package = "com.zhili.cardgame.proto";  
option java_outer_classname = "Constant";  
 
 
enum IDScope {
	ID_SYSTEM = 0;
	ID_HALL = 1000;
	ID_CHAT = 1200;
	ID_REWARD = 2000;
	ID_TRADE = 3000;
	ID_BAG = 3500;
	ID_FRIEND = 4000;
	ID_RANK = 4200;
	
	ID_GAME = 5000;
	
} 
 
 //房间事件
enum TableEventType {
	PLAYER_JOIN = 1;//进入房间
	PLAYER_LEAVE = 2;//离开房间
	PLAYER_RECONNECTED = 3; 
	PLAYER_DISCONNECTED = 4;
	PLAYER_KICKED = 5;
}

//玩牌过程中动作类型
enum BetAction{
	FOLLOW = 1;//跟注
	ADD = 2;//加注
	COMPARE = 3;//比牌
	SHOW_HAND = 4;//全押
	GIVE_UP = 5;//弃牌
	SEE_POKER = 6;//看牌
}

//牌桌类型
enum TableType {
	TABLE_L = 1;//低级场
	TABLE_M = 2;//中级场
	TABLE_H = 3;//高级场
}

//牌型
enum PokerType {
	P_BAOZI = 10;
	P_TONGHUASHUN = 9;
	P_TONGHUA = 8;
	P_SHUN = 7;
	P_DUI = 6;
	P_DAN = 5;
	P_352 = 4;
}

// 排行榜类型
enum RankType {
	RANK_WEALTH = 1;
	RANK_CHARGE = 2;
	RANK_CHARM = 3;
	RANK_MAKE_MONEY = 4;
}

// 排行榜参数
enum RankTime{
	RANK_ALL_TIME = 0;
	RANK_YESTERDAY = 1;
	RANK_TODAY = 2;
	RANK_LAST_MONTH = 3;
	RANK_THIS_MONTH = 4;
	RANK_LAST_WEEK = 5;
	RANK_THIS_WEEK = 6;
}

enum ShopItemType {
	SHOP_GOLD = 1;
	SHOP_ITEM = 2;
}

enum NotificationType {
	N_BROADCAST = 1;
	N_MAIL = 2;
	N_REWARD = 3;
	N_GIFT_RECEIVED = 4;
}